Quorum/Library/Tests/TypeChecker/Pass/ExpAssignTextObjUndefined.quorum
class Main
    action Main
        Text txt
        txt = cast(Text, undefined)
        if txt = undefined
            output "passed"
        end
    end
end