Quorum/Library/Tests/TypeChecker/Fail/ExpAssignTextObjBoolObjField.quorum
class main
    Boolean b
    Text txt
    action Main
        b:SetValue(true)
        txt = cast(Text, b)
    end
end